<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Today - Sunny - 88 / 63</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="icon">Icon of Weather</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="pref_title_location_label">Location Zip</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_default_location_default" translatable="false">68105</string>
    <string name="pref_temp_key" translatable="false">temperature</string>
    <string name="pref_title_temperature_label">Temperature Units</string>
    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="action_map">Show Location</string>
    <string name="menu_item_share">Share</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="format_full_friendly_date" translatable="false"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <string name="format_temperature" translatable="false"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="f_wind_mph"><xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="f_wind_kmh"><xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>
    <string name="f_humidity"><xliff:g id="humidity">%1.0f</xliff:g> %%</string>
    <string name="f_pressure"><xliff:g id="pressure">%1.0f</xliff:g> hPa</string>
    <string name="sync_account_type" translatable="false">sunshine.example.com</string>
    <string name="content_authority" translatable="false">com.fract.nano.williamyoung.sunshine</string>
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>
    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="pref_title_notification_label">Weather Notifications</string>
    <string name="pref_default_notification" translatable="false">true</string>
    <string name="pref_notification_key" translatable="false">notification</string>
    <string name="empty">No Weather Information Available</string>
    <string name="empty_network">No Weather Information Available. The Network is not available to fetch weather data.</string>
    <string name="empty_down">No Weather Information Available. The Server is not returning data.</string>
    <string name="empty_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_invalid">No weather information available. The location in settings is not recognized by the weather server.</string>
    <string name="pref_location_status_key" translatable="false">loc-status</string>
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location.. (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
    <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
    <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>
    <string name="pref_title_icon_label">Icon Pack</string>
    <string name="pref_icon_key">icon</string>
    <string name="pref_icons_sunshine">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>
    <string name="pref_icons_cute_dogs">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>
    <string name="pref_icons_label_sunshine">Sunshine</string>
    <string name="pref_icons_label_cute_dogs">Cute Dogs</string>
    <string name="toolbarImage">Sunshine Logo</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="detail_icon_transition_name">TN_DetailIcon</string>
    <string name="title_widget_today">Sunshine Today Widget</string>
    <string name="title_widget_detail">Sunshine Detail Widget</string>
    <string name="empty_forecast_list">No Weather Information Available</string>
    <string name="muzei_description">Muzei Live Wallpaper</string>
</resources>
