<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fract.nano.williamyoung.sunshine.DetailActivity$DetailFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/white" />

    <include layout="@layout/detail_today_grid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/detail_text_left"
        android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
        android:paddingEnd="@dimen/detail_text_left"
        android:background="@color/detail_accent_pane_background"
        app:columnCount="2">

        <TextView
            style="@style/detailLabel"
            android:id="@+id/detail_humidity_label"
            android:text="@string/humidity"
            app:layout_columnWeight="4"
            app:layout_gravity="fill" />

        <TextView
            style="@style/detailText"
            android:id="@+id/detail_humidity_textview"
            app:layout_gravity="fill"
            app:layout_columnWeight="2"
            tools:text="66%" />

        <TextView
            style="@style/detailLabel"
            android:id="@+id/detail_press_label"
            android:text="@string/pressure"
            app:layout_columnWeight="4"
            app:layout_gravity="fill" />

        <TextView
            style="@style/detailText"
            android:id="@+id/detail_pressure_textview"
            app:layout_gravity="fill"
            app:layout_columnWeight="2"
            tools:text="992 hPa" />

        <TextView
            style="@style/detailLabel"
            android:id="@+id/detail_wind_label"
            android:text="@string/wind"
            app:layout_columnWeight="4"
            app:layout_gravity="fill" />

        <TextView
            style="@style/detailText"
            android:id="@+id/detail_wind_textview"
            app:layout_gravity="fill"
            app:layout_columnWeight="2"
            tools:text="1 km/h SW" />
    </android.support.v7.widget.GridLayout>
</LinearLayout>